# codeatlas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md
.github/workflows/: docs.yml
docs/kb/: README.md  design.md  implement.md  leverage.md  phases.md  spec.md
docs/research/: codeatlas-unified-spec.md  digital-colleague-kb-spec.md  digital-colleague-kb.md
examples/executorch-onboarding-notes/: API.md  CLAUDE.md  CONCEPTS.md  FLOWS.md  HOW-TO.md  INDEX.md  OVERVIEW.md  README.md
examples/onnxruntime-onboarding-notes/: API.md  CLAUDE.md  CONCEPTS.md  FLOWS.md  HOW-TO.md  INDEX.md  OVERVIEW.md  README.md
examples/pybind11-onboarding-notes/: API.md  CLAUDE.md  CONCEPTS.md  FLOWS.md  HOW-TO.md  INDEX.md  OVERVIEW.md  README.md
examples/redis-onboarding-notes/: API.md  CLAUDE.md  FLOWS.md  (+5 more)
framework/: AGENT-PROTOCOL.md  EXAMPLES.md  GENERATION.md  MANIFEST.md  ONBOARD-GUIDE.md  README.md  STANDARD.md  WRITING-STYLE.md
framework/kb/fixtures/mini-runtime/: CMakeLists.txt
framework/kb/fixtures/mini-runtime/cpu/: elementwise_ops.cc
framework/kb/fixtures/mini-runtime/et/: custom_ops.cpp
framework/kb/fixtures/mini-runtime/qnn/: relu_builder.cc
framework/kb/fixtures/mini-runtime/tests/: elementwise_test.cc
scaffold/: AGENT-warm-up.md  API.md  CLAUDE.md  FLOWS.md  HANDOFF.md  HOW-TO.md  INDEX.md  ONBOARD-CHECKLIST.md  OPEN-QUESTIONS.md  OVERVIEW.md  README.md
template/: AGENT-warm-up.md  CLAUDE.md  CONCEPTS.md  EXAMPLES.md  FLOWS.md  HANDOFF.md  INDEX.md  ONBOARD-CHECKLIST.md  ONBOARD-GUIDE.md  OVERVIEW.md  README.md  STANDARD.md
(+48 files in other folders)
